# virtual-silicon-validation-platform

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  setup-branch-protection.yml
configs/: device.yaml  faults.yaml  test_environment.yaml
docs/: architecture.md  risk_analysis.md  test_strategy.md  troubleshooting.md
firmware_simulator/: README.md  main.c
scripts/: generate_report.py  run_validation.py  seed_database.py
src/virtual_silicon/: __init__.py  cli.py  exceptions.py
src/virtual_silicon/analytics/: __init__.py  analyzer.py  report_generator.py
src/virtual_silicon/api/: __init__.py  main.py
src/virtual_silicon/configuration/: __init__.py  settings.py
src/virtual_silicon/database/: __init__.py  models.py  repository.py  session.py
src/virtual_silicon/device/: __init__.py  byte_order.py  memory.py  register.py  register_map.py  virtual_chip.py
src/virtual_silicon/faults/: __init__.py  fault_injector.py  fault_models.py
src/virtual_silicon/instruments/: __init__.py  multimeter.py  power_supply.py  spectrometer.py  temperature_sensor.py
src/virtual_silicon/protocols/: __init__.py  base.py  i2c.py  spi.py
tests/: conftest.py
tests/integration/: test_chip_initialization.py  test_full_validation_flow.py  test_power_sequence.py
tests/performance/: test_memory_performance.py
tests/system/: test_end_to_end_validation.py
tests/unit/: test_analytics.py  test_api.py  test_cli.py  test_database.py  test_fault_injection.py  test_i2c.py  test_instruments.py  test_memory.py  test_power_states.py  test_register_behaviors.py  test_registers.py  test_settings.py  test_spi.py
