[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-silicon-validation-platform"
version = "1.0.0"
description = "Python-based virtual silicon validation platform"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "Marcelino Soares de Oliveira", email = "marcelino@example.com"}
]
keywords = ["silicon", "validation", "testing", "hardware", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
virtual-silicon = "virtual_silicon.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]

python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System-level tests",
    "performance: Performance tests",
    "memory: Memory-related tests",
    "protocol: Protocol tests",
    "fault: Fault injection tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN201", "ANN202", "ANN401"]
"scripts/**" = ["ANN001", "ANN201", "ANN202"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
fail_under = 85
